Integrate dynamic graph using plotly

--- a/traffic/templates/traffic/graphh.html
+++ b/traffic/templates/traffic/graphh.html
@@ -16,8 +16,12 @@
       <div style="width: 800px;float: left;">
       {{dat | safe}}
 </div>
-<div>
-      <img src="data:image/png;base64,{{data}}" alt="Graph" width="500">
+
+<div style="margin: auto;
+width: 50%;
+padding: 10px;" >
+{{ graph_div|safe }}
+{{ graph_div_krish|safe }}
 </div>
 </div> 
 </div>
